--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
         id: release
         with:
           release-type: python # just keep a changelog, no version anywhere outside of git tags
-          package-name: juno_template
+          package-name: juno_mapping
   lint:
     name: Lint Code Base
     runs-on: ubuntu-latest
