fix: gitignore not ignoring config files

--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,9 @@ input
 output
 sample_sheet.yaml
 config/sample_sheet.yaml
+*/sample_sheet.yaml
 config/variables.yaml
 config/juno_call.txt 
 config/user_parameters.yaml
+*/user_parameters.yaml
 core.*
