--- a/.gitignore
+++ b/.gitignore
@@ -137,10 +137,8 @@ envs/src
 input
 output
 sample_sheet.yaml
-config/sample_sheet.yaml
-*/sample_sheet.yaml
+./config/sample_sheet.yaml
 config/variables.yaml
 config/juno_call.txt 
-config/user_parameters.yaml
-*/user_parameters.yaml
+./config/user_parameters.yaml
 core.*
