deps: remove anaconda and defaults channel and add no defaults channel

--- a/envs/juno_mapping.yaml
+++ b/envs/juno_mapping.yaml
@@ -2,9 +2,8 @@ name: juno_mapping
 channels:
   - conda-forge
   - bioconda
-  - anaconda
   - biocore
-  - defaults
+  - nodefaults
 dependencies:
   - git=2.40.*
   - mamba=1.3.*
