test: finish e2e test

--- a/envs/juno_mapping.yaml
+++ b/envs/juno_mapping.yaml
@@ -11,5 +11,6 @@ dependencies:
   - snakemake=7.18.*
   - pip=23.*
   - python=3.11.*
+  - pyvcf
   - pip:
     - "--editable=git+https://github.com/RIVM-bioinformatics/juno-library.git@v2.0.0#egg=juno_library"
