--- a/.github/workflows/juno_mapping_tests.yaml
+++ b/.github/workflows/juno_mapping_tests.yaml
@@ -4,6 +4,9 @@ name: Juno_mapping test
 
 on: [push, pull_request]
 
+env:
+  KRAKEN_DEFAULT_DB: ~/kraken-database
+
 jobs:
   build:
     runs-on: ${{ matrix.config.os }}
@@ -15,18 +18,50 @@ jobs:
     name: Testing Juno_mapping ${{ matrix.config.os }}
 
     steps:
+      - name: Get Date
+        id: get-date
+        run: |
+          today=$(/bin/date -u '+%Y%m%d')
+          echo $today
+          echo "today=$today" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v2
       - uses: eWaterCycle/setup-singularity@v7
         with:
           singularity-version: 3.8.7
       - name: Install Conda environment with Micromamba
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           cache-downloads: true
           environment-file: envs/juno_mapping.yaml
+      - name: Cache minikraken
+        id: cache-minikraken
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.KRAKEN_DEFAULT_DB }}
+          key: minikraken-${{ runner.os }}-${{ steps.get-date.outputs.today }}
+      - name: Download k2 database
+        if: steps.cache-minikraken.outputs.cache-hit != 'true'
+        run: |
+          mkdir -pv ${{ env.KRAKEN_DEFAULT_DB }}
+          cd ${{ env.KRAKEN_DEFAULT_DB }}
+          curl -k https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20220908.tar.gz > k2_viral_20220908.tar.gz
+          tar zxvf k2_viral_20220908.tar.gz
+          ls -lh
       - name: Conda list
         shell: bash -l {0}
         run: conda list
+      - name: Run Juno-mapping test
+        shell: bash -l {0}
+        run: >
+          python juno_mapping.py 
+            -i tests 
+            -o test_output 
+            -s mycobacterium_tuberculosis 
+            --reference tests/gordonia.fasta 
+            --disable-mask 
+            --local 
+            --snakemake-args "cores=1" "nodes=1" 
+            --db-dir ${{ env.KRAKEN_DEFAULT_DB }}
       - name: Test the python wrapper using juno_mapping.
         shell: bash -l {0}
         run: python ./tests/test_juno_mapping.py
