--- a/.github/workflows/juno_mapping_tests.yaml
+++ b/.github/workflows/juno_mapping_tests.yaml
@@ -18,16 +18,10 @@ jobs:
     name: Testing Juno_mapping ${{ matrix.config.os }}
 
     steps:
-      - name: Get Date
-        id: get-date
-        run: |
-          today=$(/bin/date -u '+%Y%m%d')
-          echo $today
-          echo "today=$today" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v2
-      - uses: eWaterCycle/setup-singularity@v7
-        with:
-          singularity-version: 3.8.7
+      # - uses: eWaterCycle/setup-singularity@v7
+      #   with:
+      #     singularity-version: 3.8.7
       - name: Install Conda environment with Micromamba
         uses: mamba-org/setup-micromamba@v1
         with:
@@ -38,7 +32,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ env.KRAKEN_DEFAULT_DB }}
-          key: minikraken-${{ runner.os }}-${{ steps.get-date.outputs.today }}
+          key: minikraken-${{ runner.os }}
       - name: Download k2 database
         if: steps.cache-minikraken.outputs.cache-hit != 'true'
         run: |
