--- a/.github/workflows/juno_mapping_tests.yaml
+++ b/.github/workflows/juno_mapping_tests.yaml
@@ -19,9 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      # - uses: eWaterCycle/setup-singularity@v7
-      #   with:
-      #     singularity-version: 3.8.7
+      - uses: eWaterCycle/setup-singularity@v7
+        with:
+          singularity-version: 3.8.7
       - name: Install Conda environment with Micromamba
         uses: mamba-org/setup-micromamba@v1
         with:
