deps: set nodefaults for conda envs

--- a/workflow/envs/bbtools.yaml
+++ b/workflow/envs/bbtools.yaml
@@ -1,8 +1,7 @@
-name: bbtools
 channels:
   - bioconda
   - conda-forge
-  - defaults
+  - nodefaults
 dependencies:
     - samtools==1.9
     - bbmap==38.86
