--- a/envs/juno_mapping.yaml
+++ b/envs/juno_mapping.yaml
@@ -8,7 +8,7 @@ dependencies:
   - git=2.40.*
   - mamba=1.3.*
   - pandas=1.5.*
-  - snakemake=7.32.*
+  - snakemake=7.32.0
   - pip=23.*
   - python=3.11.*
   - pyvcf
