--- a/.github/workflows/juno_mapping_singularity.yaml
+++ b/.github/workflows/juno_mapping_singularity.yaml
@@ -18,6 +18,16 @@ jobs:
     name: Singularity Juno_mapping pipeline ${{ matrix.config.os }}
 
     steps:
+      - name: check space 1
+        shell: bash -l {0}
+        run: |
+          df -h .
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
       - uses: actions/checkout@v2
       - uses: eWaterCycle/setup-singularity@v7
         with:
@@ -45,7 +55,7 @@ jobs:
       - name: Conda list
         shell: bash -l {0}
         run: conda list
-      - name: check space
+      - name: check space 2
         shell: bash -l {0}
         run: |
           which singularity
@@ -65,7 +75,7 @@ jobs:
       - name: Test the juno_mapping wrapper
         shell: bash -l {0}
         run: pytest -v tests/test_juno_mapping.py
-      - name: check space 2
+      - name: check space 3
         if: always()
         shell: bash -l {0}
         run: | 
