ci: check storage

--- a/.github/workflows/juno_mapping_singularity.yaml
+++ b/.github/workflows/juno_mapping_singularity.yaml
@@ -26,6 +26,9 @@ jobs:
           df -h .
           echo "Checking space: /mnt"
           df -h /mnt
+          echo "Checking dir sizes"
+          du -sh *
+          du -sh */*
       - uses: actions/checkout@v4
       - uses: eWaterCycle/setup-singularity@v7
         with:
@@ -70,6 +73,9 @@ jobs:
           df -h .
           echo "Checking space: /mnt"
           df -h /mnt
+          echo "Checking dir sizes"
+          du -sh *
+          du -sh */*
           which singularity
           singularity --version
       - name: Test juno_mapping pipeline using singularity.
@@ -86,3 +92,6 @@ jobs:
           df -h .
           echo "Checking space: /mnt"
           df -h /mnt
+          echo "Checking dir sizes"
+          du -sh *
+          du -sh */*
