fix: use snakemake args instead of new cli option

--- a/envs/juno_mapping.yaml
+++ b/envs/juno_mapping.yaml
@@ -13,4 +13,4 @@ dependencies:
   - python=3.11.*
   - pyvcf
   - pip:
-    - "--editable=git+https://github.com/RIVM-bioinformatics/juno-library.git@cluster_cancel#egg=juno_library"
+    - "--editable=git+https://github.com/RIVM-bioinformatics/juno-library.git@v2.2.1#egg=juno_library"
